app/style/PurchaseTickets.less
@import (reference) "./main.less";
@import (reference) "./Icons.less";

.purchase-ticket-area {
  width: 740px;
}

.stake-info-area {
  background-color: var(--background-back-color);
}

.stake-info-row-area {
  height: 18px;
  padding: 21px 0 23px 29px;
  border-radius: 5px;
}

.stake-info {
  margin-right: 100px;
  white-space: nowrap;
}

.stake-info-details {
  padding: 21px 0 23px 29px;
}

.stake-info-details-row {
  margin-bottom: 10px;
}

.purchase-ticket-area-row-label {
  font-size: 19px;
  color: var(--input-color-default);
}

.stakepool-purchase-ticket-buttons-area {
  text-align: right;
}

.num-tickets-icon {
  width: 20px;
  height: 20px;
  background-size: 6px;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-color: #8997A5;
  box-shadow: 0px 3px 8px #09144036;
  margin-left: 3px;
  border-radius: 5px;

  &.more {
    background-image: @tickets-plus-icon;

    &:hover {
      opacity: 0.7;
    }
  }

  &.less {
    background-image: @tickets-minus-icon;

    &:hover {
      opacity: 0.7;
    }
  }
}

.stakepool-purchase-ticket-quick-bar {
  padding: 20px 0 0 20px;
  height: 64px;
}

.purchase-ticket-advanced-labels {
  margin-right: 10px;
  text-align: right;
}

.purchase-ticket-advanced-info-area {
  padding: 30px 0 0 20px;
}

.stakepool-purchase-ticket-title-info-icon {
  margin-left: auto;
}

.info-title-icon {
  margin-left: auto;
}

.purchase-ticket-area-row {
  padding: 29px 0 0 40px;
  height: 56px;
  border-bottom: 1px var(--disabled-background-color) solid;
  background-color: var(--background-back-color);
  margin-top: 10px;
}

.stakepool-purchase-ticket-num-select {
  height: 22px;
  margin-left: 6px;
  border-bottom: 1px var(--stroke-color-default) solid;
  width: 120px;

  &.error {
    border-bottom: 1px var(--error-text-color) solid;
  }
}

.stakepool-purchase-ticket-input-select {
  font-size: 16px;
  text-align: left;
  width: 300px;
  margin-right: 100px;
}

.stakepool-purchase-ticket-label {
  white-space: nowrap;
  margin-bottom: 25px;
  height: 20px;
}

.stakepool-purchase-ticket-input {
  margin-bottom: 20px;
  height: 20px;
}

.advanced-small-input {
  width: 100px;
}

.stakepool-advanced-big-input {
  width: 295px;
  margin-right: 10px;
}

.stakepool-content-import-script-button {
  background-repeat: no-repeat;
  background-size: 25px;
  background-position: center;
  background-image: var(--importscript-icon);
  width: 20px;
  height: 25px;
  padding: 0px;
  margin-top: 10px;
}

.stakepool-content-import-script-button.loading {
  background-image: none;
  > .spinner > div {
    background-color: var(--title-text-and-button-background-hovered);
  }
}

.stakepool-content-import-script-button:hover {
  opacity: 0.7;
}

.stakepool-content-revoke-button {
  margin-right: 10px;
}

.stakepool-flex-height-auto-buyer-wrapper {
  background-color: var(--background-back-color);
  padding: 10px 20px 0px 20px;
  flex-direction: column;
  display: flex;
}

.stakepool-auto-buyer-row {
  display: flex;
  margin-bottom: 10px;
  width: 100%;
}

.stakepool-auto-buyer-row-portion-full {
  width: 100%;
  text-align: center;

  .stakepool-autobuyer-input {
    width: 100px;
  }
}

.stakepool-auto-buyer-row-portion-half {
  width: 50%;

  .stakepool-autobuyer-input {
    width: 230px;
  }
}

.stakepool-autobuyer-label {
  .inline-block-mixin;

  font-size: 16px;
  line-height: 20px;
}

.stakepool-autobuyer-input {
  .inline-block-mixin;

  width: 200px;
}

.autobuyer-switch {
  .inline-block-mixin;

  width: 85px;
}

.autobuyer-switch-enabled,
.autobuyer-switch-disabled {
  display: block;
  width: 50px;
  height: 20px;
  border-radius: 3px;
  transition: all 200ms ease-in-out;
  background-color: var(--autobuyer-switch-bg);
  float: left;
}

.autobuyer-switch-enabled:hover {
  width: 47px;
  padding-left: 3px;
}

.autobuyer-switch-disabled:hover {
  width: 47px;
  padding-right: 3px;
}

.autobuyer-switch-knob-enabled,
.autobuyer-switch-knob-disabled {
  width: 25px;
  height: 100%;
  border-radius: 3px;
  box-shadow: 0 3px 8px rgba(12, 30, 62, 0.21);
  transition: all 200ms ease-in-out;
}

.autobuyer-switch-knob-enabled {
  background-color: var(--input-color);
}

.autobuyer-switch-knob-disabled {
  float: right;
  background-color: var(--autobuyer-switch-knob-bg);
}

.stakepool-auto-buyer-show-advanced-area {
  .inline-block-mixin;

  float: right;
}

.stakepool-info-icon {
  background-position: 0px 50%;
  background-size: 16px;
  background-repeat: no-repeat;
  padding-left: 20px;
  margin: 0 20px 15px 0;
  width: 100%;
  font-family: var(--font-family-monospace);
  color: var(--header-desc-lighter-color);
  font-size: 11px;

  &.stakepool-icon {
    background-image: var(--stake-pool-icon);
  }

  &.stakepool-expiry-icon {  
    background-image: var(--expiry-icon);
  }
  
  &.stakepool-fee-icon {
    background-image: var(--split-fee-icon);
  }
  
  &.stakepool-ticket-address-icon {
    background-image: var(--ticket-address-icon);
  }
  
  &.stakepool-fee-address-icon {
    background-image: var(--fee-address-icon);
  }
  
  &.stakepool-pool-fee-icon {
    background-image: var(--pool-fee-icon);
  }  
}

.purchase-ticket-action-buttons {
  float: right;
  margin: 15px 19px 0 0;
}

.stakepool-purchase-ticket-info {
  margin-bottom: 10px;
  background-color: var(--transfer-details-bg);
}

.ticket-numeric-input {
  border: 0;

  .input {
    max-width: 30px;
  }

  .unit-area {
    color: var(--stroke-color-default);
  }

  &.input-and-unit.error {
    border-bottom: 0;

    &:hover {
      border-bottom: 0;
    }
  }

  .input-errors-area {
    margin-top: 4px;
    width: 100%;  
  }
}

@media screen and (max-width: 1179px) {
  .stake-info {
    margin-right: 70px;
  }

  .purchase-ticket-area {
    width: 667px;
  }

  .stakepool-purchase-ticket-input-select {
    width: 220px;
  }
}

@media screen and (max-width: 768px) {
  .stake-info-details-row {
    flex-direction: column !important;
  }

  .inputs-row-label {
    margin-bottom: 115px;
  }

  .purchase-ticket-advanced-inputs {
    width: 150px;

    .inputs-row {
      flex-direction: column;

      .is-row {
        margin-left: -50px;

        .stakepool-purchase-ticket-label {
          margin-right: 10px;
        }
      }
    }
  }

  .stakepool-advanced-big-input {
    width: 150px;
  }

  .purchase-ticket-area {
    width: 355px;
  }

  .stakepool-info-icon {
    margin: 0 10px 5px 0;
  }

  .stakepool-purchase-ticket-quick-bar {
    height: 115px;
  }

  .stake-info-row-area {
    padding-left: 20px;
  }

  .stake-info {
    margin-right: 40px;
  }
  
  .purchase-ticket-area-row {
    height: 116px;
    padding: 23px 0 0 35px;

    &.is-row {
      flex-direction: column;
    }
  }

  .stakepool-purchase-ticket-num-select {
    width: 242px;
  }

  .stakepool-purchase-ticket-input-select {
    width: 242px;
    margin-right: 0;
    margin-left: 10px;
  }

  .purchase-ticket-area-row-label {
    font-size: 13px;
  }

  .purchase-ticket-input-amount {
    margin-left: -10px;
    margin-top: 25px;
  }

  .stakepool-auto-buyer-row {
    flex-direction: column;
  }

  .stakepool-auto-buyer-row-portion-full {
    text-align: start
  }

  .num-tickets-icon.more {
    margin-left: auto;
  }
}

